bug 241092, make nsIStreamLoaderObserver usable in javascript, by changing its argument from a string to an octet array r=bryner sr=darin